Bug fix for scrollbar behind the header

--- a/fitnesse/resources/bootstrap-plus/less/dark/customize.less
+++ b/fitnesse/resources/bootstrap-plus/less/dark/customize.less
@@ -9,17 +9,18 @@ body {
 #contentDiv {
   height: 100%;
   display: flex;
+  overflow-y: hidden;
+  padding: 55px 0 51px;
+}
+
+.contentEditPage {
+  padding: 55px 0 0 !important;
 }
 
 #content {
   height: 100%;
   width: 100%;
   overflow-y: auto;
-  padding: 55px 0 51px;
-}
-
-.contentWithoutFooter {
-  padding: 55px 0 0 !important;
 }
 
 article {
@@ -1380,7 +1381,6 @@ kbd {
   min-width: 300px;
   max-width: 300px;
   height: 100%;
-  padding: 55px 0 51px;
   background-color: #464646;
   border-right: 1px solid #292929;
 }
